--- a/shiyan/ball/ball.csproj
+++ b/shiyan/ball/ball.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Size.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="UserList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
